--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
         <tbody>
           <tr>
             <td>Lundi</td>
-            <td>12:30 - 19:00</td>
+            <td>Fermé</td>
           </tr>
           <tr>
             <td>Mardi</td>
